--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   chopper: ^3.0.0
   provider: ^3.1.0
   connectivity: ^0.4.4
+  built_value: ^6.7.1
+  built_collection: ^4.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,7 +34,8 @@ dev_dependencies:
     sdk: flutter
   chopper_generator: ^3.0.0
   # No version number means the latest version
-  build_runner:
+  build_runner: ^1.7.0
+  built_value_generator: ^6.7.1
 
 
 # For information on the generic Dart part of this file, see the
