--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   built_value: ^6.7.1
   built_collection: ^4.2.2
   cached_network_image: ^1.1.1
+  flutter_bloc: ^0.21.0
+  equatable: ^0.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
